updating the DB, the examples to insert to the DB, the yaml and the get recipe by ID to return all the necacery data incldue the ingridiants and instractions
